drlm (2.4.1) stable release; urgency=high
  * Fixed --skip-alias parameter in which command
  * Fixed several typo errors 
  * Fixed cat, grep and xargs bugs
  * Parameterizable qemu-nbd options

 -- Pau Roura <pau@brainupdaters.net>  Wed, 16 Feb 2022 00:00:00 +0100

drlm (2.4.0) stable release; urgency=high
  * Multiple configuration supported
  * Incremental backups supported
  * ISO recover image supported 
  * PowerPC architecture supported
  * ReaR mkbackuponly and ReaR restoreonly supported
  * Configurable DRLM parameters for each client or backup
  * Added drlm-api systemd service
  * HTTPS GUI base to add future functionalities
  * Security token added for comunitacions between DRLM server and client
  * Improved and simplified client configurations
  * Loop devices are repaced by NBD (network block devices)
  * DR file format was changed from RAW to QCOW2 
  * Improved instclient configuration workflow
  * List Unscheduled clients bug fixed
  * Removed unsupported SysVinit service management
  * SSH_PORT variable independent of SSH_OPTS
  * RSYNC protocol supported
  * Improved DRLM installation
  * Added drlm-tftpd systemd service
  * Added drlm-rsyncd systemd service
  * Addnetwork, modnetwork and addclient simplified
  * Addnetwork is done automatically when you run addclient
  * DHCP server is managed automatically
  * Improved logs management
  * Debian 11 Support on install client workflow
  * Rocky Linux 8 server and client support
  * NRDP Nagios Support
  * New write and full write mode in bkpmgr workflow
  * Configurable backup status after runbackup (enabled, disabled, write or full-write mode)
  * Information improvements and new one client mode in drlm-stord
  * Encrypted backup files

 -- Pau Roura <pau@brainupdaters.net>  Mon, 11 Oct 2021 00:00:00 +0100

drlm (2.3.2) stable release; urgency=high
  * Fixed wget package dependency (issue #127)
  * Fixed make clean leave drlm-api binary in place (issue #130)