@@ -3,8 +3,9 @@ drlm (2.4.1) stable release; urgency=high
   * Fixed several typo errors 
   * Fixed cat, grep and xargs bugs
   * Parameterizable qemu-nbd options
+  * Fixed udev hang errors
 
- -- Pau Roura <pau@brainupdaters.net>  Wed, 16 Feb 2022 00:00:00 +0100
+ -- Pau Roura <pau@brainupdaters.net>  Tue, 22 Feb 2022 00:00:00 +0100
 
 drlm (2.4.0) stable release; urgency=high
   * Multiple configuration supported
